# SG_Rectangles

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  Point2D.cpp  Point2D.hpp  Rectangle.cpp  Rectangle.hpp
tests/: CMakeLists.txt  Point2DTests.cpp  RectangleTests.cpp
